force-app/main/default/objects/custom_create232__c/custom_create232__c.object-meta.xml
<CustomObject>
    <label>Custom created object232</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects232</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>