force-app/main/default/objects/custom_create232__c/fields/custom_create_232field613__c.field-meta.xml
<CustomField>
    <fullName>custom_create_232field613__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 232field613</label>
    <type>Checkbox</type>
</CustomField>